--- a/sass/theme/_child_theme.scss
+++ b/sass/theme/_child_theme.scss
@@ -273,7 +273,7 @@ div.vera-bordered-social-icons {
 .header-nav {
 	.menu-item.current-menu-item, .menu-item.current-page-ancestor {
 		a {
-			color: $primary;
+			color: $primary !important;
 		}
 	}
 }
