dynamic shows content on the front page

--- a/css/child-theme.css
+++ b/css/child-theme.css
@@ -9760,29 +9760,44 @@ body.home .entry-header .wp-post-image {
 body.home .entry-header .label {
   margin-top: 80px; }
 
-section.concerts .body-concerts .featured-concert {
-  background-color: grey;
+section.shows .body-shows .featured-show {
+  position: relative;
+  background-color: rgba(0, 0, 0, 0.3);
   color: white;
   text-align: left;
   padding: 60px 70px;
   height: 100%; }
-  section.concerts .body-concerts .featured-concert .presented-by {
-    font-size: 12px;
+  section.shows .body-shows .featured-show .background-image {
+    position: absolute;
+    z-index: -1;
+    top: 0;
+    left: 0;
+    height: 100%;
+    width: 100%; }
+    section.shows .body-shows .featured-show .background-image img {
+      height: 100%;
+      width: 100%;
+      object-fit: cover; }
+  section.shows .body-shows .featured-show header {
     letter-spacing: 1.5px;
     text-transform: uppercase;
-    margin: 20px 0 4px; }
-  section.concerts .body-concerts .featured-concert .featured-title {
-    font-size: 56px;
-    font-family: BebasNeue;
-    text-transform: uppercase;
-    letter-spacing: 1.5px;
-    line-height: 0.8;
-    margin-bottom: 25px; }
-  section.concerts .body-concerts .featured-concert .featured-details {
+    margin: 20px 0 25px; }
+    section.shows .body-shows .featured-show header .presented-by {
+      font-size: 12px; }
+    section.shows .body-shows .featured-show header .show-headline {
+      font-size: 56px;
+      font-family: BebasNeue;
+      line-height: 0.8;
+      padding-top: 4px; }
+    section.shows .body-shows .featured-show header .show-support {
+      font-size: 18px;
+      font-family: BebasNeue; }
+  section.shows .body-shows .featured-show .show-details {
     font-size: 18px;
-    margin-bottom: 20px; }
+    margin-bottom: 20px;
+    font-family: GothicA1; }
 
-section.concerts .body-concerts .concerts-list .list-title {
+section.shows .body-shows .shows-list .list-title {
   width: 100%;
   height: 40px;
   font-family: BebasNeue;
@@ -9793,20 +9808,20 @@ section.concerts .body-concerts .concerts-list .list-title {
   background-color: black;
   color: white; }
 
-section.concerts .body-concerts .concerts-list .list-body {
+section.shows .body-shows .shows-list .list-body {
   padding: 0 20px;
   margin: 0;
   text-align: left;
   border-right: 1px solid darkgray; }
-  section.concerts .body-concerts .concerts-list .list-body .list-item {
+  section.shows .body-shows .shows-list .list-body .list-item {
     margin: 0;
     padding: 29px 0;
     list-style: none;
     position: relative; }
-    section.concerts .body-concerts .concerts-list .list-body .list-item .wrapper-left {
+    section.shows .body-shows .shows-list .list-body .list-item .wrapper-left {
       float: left;
       margin-right: 80px; }
-    section.concerts .body-concerts .concerts-list .list-body .list-item .wrapper-right {
+    section.shows .body-shows .shows-list .list-body .list-item .wrapper-right {
       width: 60px;
       float: right;
       position: absolute;
@@ -9815,13 +9830,13 @@ section.concerts .body-concerts .concerts-list .list-body {
       margin-top: -30px;
       display: flex;
       align-items: center; }
-    section.concerts .body-concerts .concerts-list .list-body .list-item .event-date {
+    section.shows .body-shows .shows-list .list-body .list-item .event-date {
       font-family: GothicA1;
       font-size: 12px;
       font-weight: bold;
       letter-spacing: 1.5px;
       text-transform: uppercase; }
-    section.concerts .body-concerts .concerts-list .list-body .list-item .event-title {
+    section.shows .body-shows .shows-list .list-body .list-item .event-title {
       margin-top: 10px;
       color: #D41C53;
       font-family: BebasNeue;
@@ -9829,14 +9844,14 @@ section.concerts .body-concerts .concerts-list .list-body {
       font-weight: normal;
       line-height: 1;
       letter-spacing: 1.5px; }
-    section.concerts .body-concerts .concerts-list .list-body .list-item .event-icon {
+    section.shows .body-shows .shows-list .list-body .list-item .event-icon {
       width: 60px;
       height: 60px;
       float: right; }
-  section.concerts .body-concerts .concerts-list .list-body .list-item:not(:last-child) {
+  section.shows .body-shows .shows-list .list-body .list-item:not(:last-child) {
     border-bottom: 1px solid darkgray; }
 
-section.concerts .body-concerts .concerts-list .list-more {
+section.shows .body-shows .shows-list .list-more {
   padding: 32px 0;
   background-color: #D41C53;
   color: white;
