--- a/sass/theme/_classes_page.scss
+++ b/sass/theme/_classes_page.scss
@@ -2,10 +2,10 @@ section.classes {
 	padding-bottom: 100px;
 
 	.list-header, .list-item {
-		margin-left: 15px;
-		padding-left: 0px;
-		margin-right: 15px;
-		padding-right: 0px;
+		//margin-left: 15px;
+		//padding-left: 0px;
+		//margin-right: 15px;
+		//padding-right: 0px;
 		border-bottom: 3px solid $lightgray;
 	}
 
@@ -13,6 +13,10 @@ section.classes {
 		padding-bottom: 30px;
 
 		.filter-category {
+			@media screen and (max-width: 767px) {
+				font-size: 14px !important;
+			}
+
 			height: 24px;
 			padding: 6px 15px;
 			margin-right: 25px;
@@ -36,8 +40,15 @@ section.classes {
 		display: flex;
 		align-items: center;
 		height: 117px;
+		a:hover {
+			text-decoration: underline;
+			cursor: pointer;
+		}
 
 		.class-title {
+			@media screen and (max-width: 767px) {
+				font-size: 24px !important;
+			}
 			display: inline-block;
 			color: $primary;
 			font-family: BebasNeue;
@@ -46,36 +57,25 @@ section.classes {
 			line-height: 1;
 			letter-spacing: 1.5px;
 			max-width: 500px;
-			padding-right: 100px;
+			//padding-right: 100px;
 		}
 
-		.flex {
-			display: flex;
-			align-items: center;
-			position: absolute;
-			left: 100px;
-			right: 0;
-
-			.wrapper {
-				display: flex;
-				align-items: center;
-				position: absolute;
-				right: 0;
-			}
-	
+		.class-row {
 			.class-info {
-				display: inline-block;
 				text-align: center;
-				width: 100px;
-				margin-right: 30px;
+				//margin-right: 30px;
 				font-family: GothicA1;
 				font-size: 18px;
+				@media screen and (max-width: 767px) {
+					font-size: 14px !important;
+				}
 			}
 
 			.class-register {
+				@media screen and (max-width: 767px) {
+					font-size: 14px !important;
+				}
 				display: inline-block;
-				height: 60px;
-				width: 160px;
 				text-align: center;
 				padding-top: 10px;
 				font-family: BebasNeue;
@@ -93,6 +93,7 @@ section.classes {
 	}
 
 }
+
 
 .modal {
 	.modal-title {
