--- a/sass/theme/_child_theme.scss
+++ b/sass/theme/_child_theme.scss
@@ -442,6 +442,9 @@ section.info {
 		text-decoration: none;
 		color: white;
 	}
+	img.support-vera-graphic {
+		max-height: 400px;
+	}
 }
 
 
@@ -449,93 +452,6 @@ section.info {
 	.mobile-space {padding-left: 1rem !important;}
 }
 
-
-
-
-
-section.banner {
-	position: relative;
-	margin-top: 70px;
-	padding: 0;
-	height: 900px;
-	color: white;
-	text-align: left;
-	overflow: hidden;
-
-	> * {
-		position: absolute;
-		width: 100%;
-	}
-
-	&::before {
-		content:" ";
-		position: absolute;
-		top: 0;
-		left: -210px;
-		height: 100%;
-		width: 209px;
-		background-color: $background;
-		z-index: -1;
-	}
-
-	//&::after {
-	//	content:" ";
-	//	position: absolute;
-	//	top: 0;
-	//	right: -215px;
-	//	height: 105%;
-	//	width: 214px;
-	//	background-color: $background;
-	//	z-index: -1;
-	//}
-
-	.row > *:first-child {
-		padding: 240px 20px 115px 240px;
-	}
-
-	.row > *:last-child:not(:first-child) {
-		padding: 0;
-	}
-
-	.banner-headline {
-		margin-bottom: 30px;
-		width: 50%;
-		font-family: BebasNeue;
-		font-size: 96px;
-		line-height: 0.9;
-		letter-spacing: 1.5px;
-	}
-
-	.label {
-		background-color: white;
-		color: $primary;
-	}
-
-	.more {
-		display: inline-flex;
-		height: 56px;
-		padding: 0 20px;
-		border: 2px solid white;
-		justify-content: center;
-		flex-direction: column;
-		text-align: center;
-	}
-	.more:hover {
-		text-decoration: none;
-		color: white;
-	}
-
-	.banner-background {
-		height: 640px;
-		width: 124%;
-		margin-left: -11%;
-		background-color: $primary;
-		background-image: url('../img/top-texture.png');
-		transform: rotate(9.2deg);
-		transform-origin: left;
-		z-index: -2;
-	}
-}
 
 section.donate {
 	padding: 63px 0 45px;
